[package]
name = "async-uninet"
description = "Unified types for asynchronous TCP & Unix sockets."
license = "MIT"
version = "0.1.1"
authors = ["Kristijan Sedlak <xpepermint@gmail.com>"]
edition = "2018"
documentation = "https://github.com/xpepermint/async-uninet"
homepage = "https://github.com/xpepermint/async-uninet"
repository = "https://github.com/xpepermint/async-uninet"

[dependencies]
async-std = { version = "1.5.0" }

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
